# rez-lsp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  PROJECT_STATUS.md  README.md  README_zh.md  RELEASE_CHECKLIST.md  TESTING.md  build.rs  release-plz.toml  test_lsp_client.js  test_package.py  update_summary.md
.github/workflows/: ci.yml  dependencies.yml  release-plz.yml  release.yml  vscode-extension.yml
demo/: package.py
docs/: CI-CD-SETUP.md  RELEASE-PROCESS.md
scripts/: build-all.ps1  build-all.sh  build-multiplatform.ps1  check-quality.ps1  check-quality.sh  cleanup-for-release.js  dev-install.ps1  dev-install.sh  pre-release-check.js  release-manual.js  release.ps1  test-lsp-protocol.js  trigger-release.ps1
src/: lib.rs  main.rs  package_discovery.rs  rez_config.rs  rez_lsp.rs
src/config/: mod.rs  provider.rs
src/core/: error.rs  mod.rs  traits.rs  types.rs
src/discovery/: cache.rs  discovery_impl.rs  mod.rs
src/parser/: mod.rs
src/performance/: cache.rs  metrics.rs  mod.rs  profiler.rs
src/resolver/: conflict_detector.rs  mod.rs  resolver_impl.rs
src/server/: completion.rs  diagnostics.rs  hover.rs  lsp_server.rs  mod.rs  navigation.rs
src/validation/: mod.rs  python_validator.rs  rez_validator.rs  validation_engine.rs
test-package/: package.py
tests/: integration_tests.rs
tests/integration/: dependency_resolution.rs  (+1 more)
vscode-extension/: .vscodeignore  LICENSE  README.md  eslint.config.js  language-configuration.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
(+10 files in other folders)
