[package]
name = "rez-lsp-server"
version = "0.1.2"
edition = "2021"
authors = ["Hal <hal.long@outlook.com>"]
description = "A Language Server Protocol implementation for Rez package manager with intelligent code completion, validation, and navigation"
license = "Apache-2.0"
repository = "https://github.com/loonghao/rez-lsp-server"
homepage = "https://github.com/loonghao/rez-lsp-server"
documentation = "https://docs.rs/rez-lsp-server"
readme = "README.md"
keywords = ["rez", "lsp", "language-server", "vfx", "package-manager"]
categories = ["development-tools", "text-editors"]
exclude = [
    "test_packages/*",
    "vscode-extension/node_modules/*",
    "vscode-extension/out/*",
    "vscode-extension/*.vsix",
    ".vscode/*",
    "scripts/*",
]
build = "build.rs"

[features]
default = []
vscode-extension = []

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
regex = "1.10"
futures = "0.3"

[dev-dependencies]
tempfile = "3.0"
